# cua-hackathon

./: .gitignore  pyproject.toml
libs/python/agent/agent/: agent.py
libs/python/agent/agent/loops/: composed_grounded.py  omniparser.py  openai.py
project/: AGENTS.md  README.md  main.py  package-lock.json  package.json  pyproject.toml
project/cli/: index.ts
project/rec/: package.json
project/record/: vad.ts
project/server/: README.md  index.ts  main.py  pyproject.toml
project/server-js/: package-lock.json
project/src/cli/: index.ts
project/src/record/: vad.ts
project/src/server/: index.ts
project/src/server-js/: README.md  a.b64  a.pcm  a.pcm.b64  count_tokens.py  package.json  pipe.js  realtime.js  rt.jsonl  sample1.m4a  sample1.txt  sample2.m4a  sample3.m4a  test.js
project/src/server-py/: README.md  main.py  pyproject.toml
project/src/sidekick/: README.md  index.ts  package.json
project/ui/: package-lock.json  package.json
project/ui/src/: App.jsx
project/vad-app/: README.md  vite.config.js
project/vad-app/src/: App.jsx  vad-cli.ts
vad-app/: package.json  vite.config.js
vad-app/src/: App.jsx
