[project]
name = "cua-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cua-agent[all]",
    "cua-computer-server>=0.1.22",
    "cua-som>=0.1.3",
    "openai>=1.107.2",
    "quart>=0.20.0",
    "quart-cors>=0.7.0",
]

[tool.uv.sources]
cua-agent = { path = "../../libs/python/agent" }
